--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
   "dependencies": {
     "async": "^3.1.1",
     "bcrypt": "^3.0.8",
+    "boom": "^7.3.0",
     "hapi": "^18.1.0",
     "hapi-swagger": "^12.1.0",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.8.11",
-    "swagger": "^0.7.5"
+    "nodemon": "^2.0.2",
+    "swagger": "^0.7.5",
+    "underscore": "^1.9.2"
   }
 }
