--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "bcrypt": "^3.0.8",
     "boom": "^7.3.0",
     "hapi": "^18.1.0",
-    "hapi-swagger": "^12.1.0",
+    "hapi-swagger": "^10.0.0",
+    "inert": "^5.1.3",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.8.11",
     "nodemon": "^2.0.2",
-    "swagger": "^0.7.5",
-    "underscore": "^1.9.2"
+    "underscore": "^1.9.2",
+    "vision": "^5.4.4"
   }
 }
