--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
   },
   "homepage": "https://github.com/benphilip1991/del-api#readme",
   "dependencies": {
+    "@hapi/hapi": "^19.1.0",
+    "@hapi/inert": "^6.0.1",
+    "@hapi/joi": "^17.1.0",
+    "@hapi/vision": "^6.0.0",
     "async": "^3.1.1",
     "bcrypt": "^3.0.8",
     "boom": "^7.3.0",
     "hapi": "^18.1.0",
-    "hapi-swagger": "^10.0.0",
+    "hapi-swagger": "^12.1.0",
     "inert": "^5.1.3",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
