--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Digital Enhanced Living service API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "NODE_ENV=production node index.js",
+    "dev_local": "NODE_ENV=development npx nodemon"
   },
   "repository": {
     "type": "git",
@@ -20,22 +22,20 @@
   },
   "homepage": "https://github.com/benphilip1991/del-api#readme",
   "dependencies": {
+    "@hapi/boom": "^9.0.0",
     "@hapi/hapi": "^19.1.0",
     "@hapi/inert": "^6.0.1",
     "@hapi/joi": "^17.1.0",
     "@hapi/vision": "^6.0.0",
     "async": "^3.1.1",
     "bcrypt": "^3.0.8",
-    "boom": "^7.3.0",
-    "hapi": "^18.1.0",
+    "dotenv": "^8.2.0",
+    "hapi-auth-bearer-token": "^6.1.4",
     "hapi-swagger": "^12.1.0",
-    "inert": "^5.1.3",
-    "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.8.11",
     "nodemon": "^2.0.2",
-    "underscore": "^1.9.2",
-    "vision": "^5.4.4"
+    "underscore": "^1.9.2"
   }
 }
