--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "@hapi/vision": "^6.0.0",
     "async": "^3.1.1",
     "bcrypt": "^3.0.8",
+    "botbuilder-adapter-web": "^1.0.7",
+    "botkit": "^4.8.1",
+    "botkit-middleware-watson": "^2.1.4",
     "dotenv": "^8.2.0",
     "hapi-auth-bearer-token": "^6.1.4",
     "hapi-swagger": "^12.1.0",
@@ -37,5 +40,9 @@
     "mongoose": "^5.8.11",
     "nodemon": "^2.0.2",
     "underscore": "^1.9.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5"
   }
 }
