--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
     "@hapi/vision": "^6.0.0",
     "async": "^3.1.1",
     "bcrypt": "^3.0.8",
-    "botbuilder-adapter-web": "^1.0.7",
-    "botkit": "^4.8.1",
-    "botkit-middleware-watson": "^2.1.4",
+    "botkit": "^0.7.0",
     "dotenv": "^8.2.0",
     "hapi-auth-bearer-token": "^6.1.4",
     "hapi-swagger": "^12.1.0",
+    "ibm-watson": "^5.5.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.8.11",
     "nodemon": "^2.0.2",
+    "socket.io": "^2.3.0",
     "underscore": "^1.9.2"
   },
   "devDependencies": {
