--- a/package.json
+++ b/package.json
@@ -23,27 +23,28 @@
   },
   "homepage": "https://github.com/benphilip1991/del-api#readme",
   "dependencies": {
-    "@hapi/boom": "^9.0.0",
-    "@hapi/hapi": "^19.1.0",
-    "@hapi/inert": "^6.0.1",
-    "@hapi/joi": "^17.1.0",
-    "@hapi/vision": "^6.0.0",
-    "async": "^3.1.1",
+    "@google-cloud/dialogflow": "^3.3.0",
+    "@hapi/boom": "^9.1.1",
+    "@hapi/hapi": "^19.2.0",
+    "@hapi/inert": "^6.0.3",
+    "@hapi/joi": "^17.1.1",
+    "@hapi/vision": "^6.0.1",
+    "async": "^3.2.0",
     "bcrypt": "^5.0.0",
     "botkit": "^0.7.0",
     "dotenv": "^8.2.0",
-    "hapi-auth-bearer-token": "^6.1.4",
-    "hapi-swagger": "^12.1.0",
-    "ibm-watson": "^5.5.0",
+    "hapi-auth-bearer-token": "^6.2.1",
+    "hapi-swagger": "^12.1.3",
+    "ibm-watson": "^5.7.3",
     "jsonwebtoken": "^8.5.1",
-    "moment": "^2.24.0",
-    "mongoose": "^5.8.11",
-    "nodemon": "^2.0.2",
+    "moment": "^2.29.1",
+    "mongoose": "^5.11.9",
+    "nodemon": "^2.0.6",
     "socket.io": "^2.3.0",
-    "underscore": "^1.9.2"
+    "underscore": "^1.12.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5"
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11"
   }
 }
