--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "NODE_ENV=production node index.js",
-    "dev_local": "./start_mongo.sh && NODE_ENV=development npx nodemon",
-    "docker_start_dev": "NODE_ENV=development npx nodemon"
+    "dev_local": "./start_mongo.sh && export GOOGLE_APPLICATION_CREDENTIALS='./.del-bot-creds.json' && NODE_ENV=development npx nodemon",
+    "docker_start_dev": "export GOOGLE_APPLICATION_CREDENTIALS='./.del-bot-creds.json' && NODE_ENV=development npx nodemon"
   },
   "repository": {
     "type": "git",
